--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Tagline: Help the homeless now
 Website
 
 HOME(ABOUT)
-
+Alright, I am editing this right now. 
 (GRAPHIC)
 In NYC: 
 An average of 92,091 people are homeless on any given night in 2019
