--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Project Address Home Page</title>
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
