--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
 Tagline: Help the homeless now
 Website
-
+<div id="main">
 HOME(ABOUT)
-Alright, I am editing this right now. 
 (GRAPHIC)
 In NYC: 
 An average of 92,091 people are homeless on any given night in 2019
@@ -36,5 +35,6 @@ LEARN MORE
 Intro paragraph (On this page you will find…) + list of relevant organizations, articles, social media accounts, documentaries 
 
 On this page you will find resources and recent news on NYC’s homelessness crisis - including relevant articles, documentaries, organizations etc.
-</body>
+  </div>
+  </body>
 </html>
