--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <title>Project Address Home Page</title>
   <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+
+  <div id="header">Project Address</div>
+  
+  </head>
 <body>
 
 Tagline: Help the homeless now
