--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Project Address Home Page</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 
+  <img src="css/images/logoblue.svg">
   <div id="header">Project Address</div>
   
   </head>
