--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 
   <img src="css/images/logoblue.svg">
-  <div id="header">Project Address</div>
+  <div id="header">Help the Homeless Now</div>
   
   </head>
 <body>
