--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Project Address Home Page</title>
   <link href="style.css" rel="stylesheet" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <img src="css/images/logoblue.svg">
   <div id="header">Help the Homeless Now</div>
