--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <div id="header">Help the Homeless Now</div>
   
   </head>
+  <nav>
+  
+  <ul class="topnav">
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li class="right"><a href="#about">About</a></li>
+</ul>
+    <!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
+  
+  </nav>
 <body>
 
 Tagline: Help the homeless now
