--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
   
   <ul class="topnav">
   <li><a class="active" href="#home">Home</a></li>
+
   <li><a href="#news">News</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li class="right"><a href="#about">About</a></li>
+  <li><a href="#store">Store</a></li>
+   <li><a href="#donate">Donate</a></li>
+    
+  <li class="right"><a href="#about">Get Involved</a></li>
 </ul>
     <!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
   
