--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <ul class="topnav">
   <li><a class="active" href="#home">Home</a></li>
 
-  <li><a href="#news">News</a></li>
+  <li><a href="#news">News and Social Media</a></li>
+    <li><a href="#news">Educate</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#store">Store</a></li>
    <li><a href="#donate">Donate</a></li>
