--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Project Address Home Page</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <div id="logo"><img src="css/images/logoblue.svg"></div>
-  <div id="header">Help the Homeless Now</div>
+  <div class="logo"><img src="css/images/logoblue.svg"></div>
+  <div class="header">Help the Homeless Now</div>
   </head>
   <nav>
  
