--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <title>Project Address Home Page</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <div class="wrapper">
   <div class="logo"><img src="css/images/logoblue.svg"></div>
-  <div class="header">Help the Homeless Now</div> <br>
+    <div class="header">Help the Homeless Now</div> <br></div>
   </head>
   <nav>
- 
+   <div class="wrapper">
   <ul class="topnav">
   <li><a class="active" href="#home">Home</a></li>
 
@@ -16,7 +17,7 @@
     <li><a href="#educate">Educate</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#store">Store</a></li>
-   <li><a href="#donate">Donate</a></li>
+    <li><a href="#donate">Donate</a></li></div>
     
   <li class="right"><a href="#about">Get Involved</a></li>
 </ul>
@@ -25,7 +26,7 @@
   </nav>
 <body>
 
- 
+   <div class="wrapper">
   
 
 Website
@@ -56,6 +57,6 @@ LEARN MORE
 Intro paragraph (On this page you will find…) + list of relevant organizations, articles, social media accounts, documentaries 
 
 On this page you will find resources and recent news on NYC’s homelessness crisis - including relevant articles, documentaries, organizations etc.
-  </div>
+     </div> </div>
   </body>
 </html>
