--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div class="wrapper">
   <div class="logo"><img src="css/images/logoblue.svg"></div>
-    <div class="header">Help the Homeless Now</div> <br></div>
+    <div class="header">Help the Homeless Now</div> </div><br>
   </head>
   <nav>
    <div class="wrapper">
@@ -17,10 +17,10 @@
     <li><a href="#educate">Educate</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#store">Store</a></li>
-    <li><a href="#donate">Donate</a></li></div>
+    <li><a href="#donate">Donate</a></li>
     
   <li class="right"><a href="#about">Get Involved</a></li>
-</ul>
+</ul></div>
     <!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
   
   </nav>
