--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div class="wrapper">
-  <div class="logo"><img src="css/images/logoblue.svg"></div>
+  <div class="logo"><img src="css/images/logoblue.svg"></div><br>
     <div class="header">Help the Homeless Now</div> </div><br>
   </head>
   <nav>
