--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <nav>
    <div class="wrapper">
+    <div class="navtext"> 
   <ul class="topnav">
   <li><a class="active" href="#home">Home</a></li>
 
@@ -20,7 +21,7 @@
     <li><a href="#donate">Donate</a></li>
     
   <li class="right"><a href="#about">Get Involved</a></li>
-</ul></div>
+      </ul></div></div>
     <!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
   
   </nav>
