--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div class="wrapper">
   <div class="logo"><img src="css/images/logoblue.svg"></div>
-    <div class="header">Help the Homeless Now</div> </div><br>
+    <div class="header">Help the Homeless Now</div> </div></div><br>
   </head>
   <nav>
    <div class="wrapper">
-    <div class="navtext"> 
+  
   <ul class="topnav">
   <li><a class="active" href="#home">Home</a></li>
 
@@ -21,7 +21,7 @@
     <li><a href="#donate">Donate</a></li>
     
   <li class="right"><a href="#about">Get Involved</a></li>
-      </ul></div></div>
+      </ul></div>
     <!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
   
   </nav>
