--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div class="wrapper">
   <div class="logo"><img src="css/images/logoblue.svg"></div><br>
-    <div class="header">Help the Homeless Now</div> </div></div><br>
+    <div class="header">Help the Homeless Now</div> </div></div>
   </head>
   <nav>
    <div class="wrapper">
