--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Between 2007-2019 the homelesness population increased by 47%
 Source: US Department of Housing and Urban Development, US Census Bureau
 <br>
   <h1>Our mission:</h1> 
-Our mission at Project Address is to connect organizations serving NYC’s homeless community with volunteers and donors. Our campaign builds awareness around the issue, and mobilizes young people to demand systemic change. We hope to inspire you to either volunteer your time at established organizations, or to donate  in order to keep these organizations running.
+  Our mission at <em>Project Address</em> is to connect organizations serving NYC’s homeless community with volunteers and donors. Our campaign builds awareness around the issue, and mobilizes young people to demand systemic change. We hope to inspire you to either volunteer your time at established organizations, or to donate  in order to keep these organizations running.
 
 
 </html>
