--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <div id="main">
 
-
-(GRAPHIC)
+  <div class="photo"<img src="css/images/homel16.jpg"></div>
+(
   <h1>In NYC:</h1> 
 An average of 92,091 people are homeless on any given night in 2019
 Almost 5 out of 1000 people are homeless
