--- a/index.html
+++ b/index.html
@@ -43,5 +43,11 @@ Source: US Department of Housing and Urban Development, US Census Bureau
   <h1>Our mission:</h1> 
   Our mission at <em>Project Address</em> is to connect organizations serving NYC’s homeless community with volunteers and donors. Our campaign builds awareness around the issue, and mobilizes young people to demand systemic change. We hope to inspire you to either volunteer your time at established organizations, or to donate  in order to keep these organizations running.
 
-
+<div id="footer">
+     
+      <div class="footer-item">© Project Address</div>
+      <div class="footer-item"> MMP 460</div>
+      <div class="footer-item">Borough of Manhattan Community College</div>
+      <div class="footer-item">Spring 2021</div>
+</div>
 </html>
