--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <div class="photo"><img src="css/images/homel6.jpg"></div>
 
   <h1>In NYC:</h1> 
-An average of 92,091 people are homeless on any given night in 2019
-Almost 5 out of 1000 people are homeless
-Between 2007-2019 the homelesness population increased by 47%
-Source: US Department of Housing and Urban Development, US Census Bureau
+An average of 92,091 people are homeless on any given night in 2019.
+Almost 5 out of 1000 people are homeless.
+Between 2007-2019 the homelesness population increased by 47%.
+Source: US Department of Housing and Urban Development, US Census Bureau.
 <br>
   <h1>Our mission:</h1> 
   Our mission at <em>Project Address</em> is to connect organizations serving NYC’s homeless community with volunteers and donors. Our campaign builds awareness around the issue, and mobilizes young people to demand systemic change. We hope to inspire you to either volunteer your time at established organizations, or to donate  in order to keep these organizations running.
