--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div id="main">
 
-  <div id="homeless"><img src="css/images/homel6.jpg"></div>
+  <div id="homeless"><img src="css/images/homel6.png"></div>
 
   <h1>In NYC:</h1> 
 An average of 92,091 people are homeless on any given night in 2019.
