--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
  <div class="flex-item-left">
    <div id="homeless"><img src="css/images/homel6.png"></div></div>
  <div class="flex-item-right">
+<div class="boxfont">
   <h1>In NYC:</h1> 
   <p>An average of 92,091 people are homeless on any given night in 2019.</p>
   <p>Almost 5 out of 1000 people are homeless.</p>
-  <p>Between 2007-2019 the homelesness population increased by 47%.</p>
+  <p>Between 2007-2019 the homelesness population increased by 47%.</p></div>
    <p>Source: US Department of Housing and Urban Development, US Census Bureau.</p> </div></div>
 <br>
   <h1>Our mission:</h1> 
