--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  <div class="flex-item-left">
    <div id="homeless"><img src="css/images/homel6.png"></div></div>
  <div class="flex-item-right">
-<div class="boxfont">
+<div id="boxfont">
   <h1>In NYC:</h1> 
   <p>An average of 92,091 people are homeless on any given night in 2019.</p>
   <p>Almost 5 out of 1000 people are homeless.</p>
