--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 
    <div class="wrapper">
   
-
 <div id="main">
+
 <div class="flex-container">
+
  <div class="flex-item-left">
    <div id="homeless"><img src="css/images/homel6.png"></div></div>
+ 
  <div class="flex-item-right">
 <div id="boxfont">
   <h1>In NYC:</h1> 
@@ -44,7 +46,7 @@
 <br>
   <h1>Our mission:</h1> 
   <p>Our mission at <em>Project Address</em> is to connect organizations serving NYC’s homeless community with volunteers and donors. Our campaign builds awareness around the issue, and mobilizes young people to demand systemic change. We hope to inspire you to either volunteer your time at established organizations, or to donate  in order to keep these organizations running.</p>
-     </div></div></div>
+     </div></div>
 <footer>    
   
       <div class="wrapper">
