--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
  <div class="flex-item-right">
 <div id="boxfont">
   <h1>In NYC:</h1> 
-  <p>An average of 92,091 people are homeless on any given night in 2019. Almost 5 out of 1000 people are homeless. 
-    Between 2007-2019 the homelesness population increased by 47%.</p></div>
+  <p>An average of 92,091 people are homeless on any given night in 2019.</p><p> Almost 5 out of 1000 people are homeless. </p>
+    <p>Between 2007-2019 the homelesness population increased by 47%.</p></div>
    <div id="source"><p>Source: US Department of Housing and Urban Development, US Census Bureau.</p> </div></div></div>
 <br>
   <h1>Our mission:</h1> 
