--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="flex-container">
 
  <div class="flex-item-left">
-   <div id="homeless"><img src="css/images/homel6.png"></div></div>
+   <div class="homeless"><img src="css/images/homel6.png"></div></div>
  
  <div class="flex-item-right">
 <div id="boxfont">
