--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div class="wrapper">
-  <div class="logo"><img src="css/images/logoblue.svg"></div><br>
+  <div class="logo"><img src="css/images/logoblue.svg"></div>
+    
+       <div class="test"><img src="css/images/homel6.png"></div><br>
     <div class="header">Help the Homeless Now</div> </div></div>
   </head>
   <nav>
@@ -34,7 +36,7 @@
 <div class="flex-container">
 
  <div class="flex-item-left">
-   <div id="photo"><img src="css/images/homel6.png"></div></div>
+   <div class="photo"><img src="css/images/homel6.png"></div></div>
  
  <div class="flex-item-right">
 <div id="boxfont">
