--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="flex-container">
 
  <div class="flex-item-left">
-   <div class="photo"><img src="css/images/homel6.png"></div></div>
+   <div class="photo"><img src="css/images/image2vector.svg"></div></div>
  
  <div class="flex-item-right">
 <div id="boxfont">
