--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
    <div class="wrapper">
   
   <ul class="topnav">
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="#involved">Get Involved</a></li>
 
   <li><a href="#news">News</a></li>
-    <li><a href="#educate">Educate</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li><a href="#store">Store</a></li>
     <li><a href="#donate">Donate</a></li>
     
-  <li class="right"><a href="#about">Get Involved</a></li>
+  
       </ul></div>
     <!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
   
