--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
   
 <div id="main">
 
-<div class="flex-container">
+<div class="row">
 
 
  
- <div class="flex-item-left">
+ <div class="column" style="background-color:#">
 <div id="boxfont">
   <h1>In NYC:</h1> 
   <p>An average of 92,091 people are homeless on any given night in 2019.</p><p> Almost 5 out of 1000 people are homeless. </p>
     <p>Between 2007-2019 the homelesness population increased by 47%.</p></div>
    <div id="source"><p>Source: US Department of Housing and Urban Development, US Census Bureau.</p> </div></div></div>
   
-   <div class="flex-item-right">
+  
+ <div class="column" style="background-color:#">
    <div class="photo"><img src="css/images/image2vector.svg"></div></div>
 <br>
   <h1>Our mission:</h1> 
