--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <div id="source"><p>Source: US Department of Housing and Urban Development, US Census Bureau.</p> </div></div></div>
   
   
- <div class="column" style="background-color:#">
+ <div class="column" style="background-color:#003049">
    <div class="photo"><img src="css/images/image2vector.svg"></div></div>
 <br>
   <h1>Our mission:</h1> 
