--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
   <h1>Our mission:</h1> 
   <p>Our mission at <em>Project Address</em> is to connect organizations serving NYC’s homeless community with volunteers and donors. Our campaign builds awareness around the issue, and mobilizes young people to demand systemic change. We hope to inspire you to either volunteer your time at established organizations, or to donate  in order to keep these organizations running.</p>
 --->
-<footer>    
+<!---<footer>    
   
       <div class="wrapper">
  <hr style="height:10px; visibility:hidden;" />
             <hr><br>
 <div class="footer"> Project Address ©  All rights reserved.</div>
   </div>
-        </footer>      
+        </footer>      --->
 
 </html>
