--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   
   
  <div class="column" style="background-color:#003049">
-   <div class="photo"><img src="css/images/image2vector.svg"></div></div>
+   <div class="photo"></div></div>
 <br>
   
 
