--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   
   
  <div class="column" style="background-color:#003049">
-   <div class="photo"></div></div>
+   <div class="photo">&nbsp;</div></div>
 <br>
   
 
