--- a/store.html
+++ b/store.html
@@ -107,7 +107,7 @@ display:block;
 
                 <div class="col c33">
                     <div class="card" style="width: 20rem;">
-                        <img class="card-img-full" <img src="Images/shop_full.png">
+                        <img class="card-img-full" <img src="css/images/shop_full.png">
                         <alt="Card image full logo">
                             </alt>
                             <div class="card-body">
@@ -121,7 +121,7 @@ display:block;
                 </div>
                 <div class="col c33">
                     <div class="card" style="width: 20rem;">
-                        <img class="card-img-full" <img src="Images/shop_sleeves.png">
+                        <img class="card-img-full" <img src="css/images/shop_sleeves.png">
                         <alt="Card image sleeves">
                             </alt>
                             <div class="card-body">
@@ -136,7 +136,7 @@ display:block;
                 
                 <div class="col c33">
                     <div class="card" style="width: 20rem;">
-                        <img class="card-img-full" <img src="Images/shop_sleeve.png">
+                        <img class="card-img-full" <img src="css/images/shop_sleeve.png">
                         <alt="Card image sleeve">
                             </alt>
                             <div class="card-body">
