--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <title>Project Address Home Page</title>
   <link href="style.css" rel="stylesheet" type="text/css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <div class="wrapper">
   <div class="logo"><img src="css/images/logoblue.svg"></div>
     
@@ -88,5 +88,5 @@
 <div class="footer"> Project Address ©  All rights reserved.</div>
   </div>
         </footer>      --->
-
+</body>
 </html>
