--- a/index.html
+++ b/index.html
@@ -12,7 +12,86 @@
 
   </head>
 
+<style>
+  html {
+    font-size: 22px;
+  }
 
+
+body {
+  font-size: calc(22px + (22 - 16) * ((100vw - 600px) / (1600 - 600)));
+}
+
+#source{
+  font-size: 3vw;
+
+}
+#container{
+    display:grid;
+    grid-template-rows: 12% 15% 15% 25% 30% 15%;
+  }
+
+.header{
+  font-size: 4vw;
+margin-left: 20%;
+margin-right: 20%;
+align-content: center;
+} 
+
+.logo{
+  width: 50%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+#banner{
+  grid-row:1;
+
+
+    
+}
+
+#nav{
+grid-row: 2;
+
+}
+
+#photo{
+grid-row: 3;
+margin-left: auto;
+margin-right: auto;
+}
+
+#stats{
+grid-row: 4;
+padding: 5px;
+}
+
+#about{
+  grid-row: 5;
+  padding-top: 10%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+
+#footer{
+  grid-row: 6;
+padding-top: 20%;
+padding-left: 5%;
+padding-right: 5%;
+font-size: 4.5vw;
+
+}
+
+
+
+
+
+
+  
+}
+</style>
 
 <body>
 
