--- a/store.html
+++ b/store.html
@@ -2,10 +2,10 @@
     <html>
 
     <head>
-        <title>Project Address</title>
+        <!--<title>Project Address</title>
         <link href="style.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <div class="wrapper">
+        /*<div class="wrapper">
             <div class="logo"><img src="images/logoblue.svg"></div>
         </div>
 
@@ -25,7 +25,41 @@
                 <li class="right"><a href="#about">Get Involved</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
+
+<!--Mike's insert of the updated nav bar -->
+
+
+<title>Project Address Home Page</title>
+ <link href="style.css" rel="stylesheet" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <div class="logo"><img src="css/images/logoblue.svg"></div>
+ <div class="header">Help the Homeless Now</div>
+
+</div>
+<div class="row" id="nav">   
+
+<ul class="topnav">
+  <li><a class="active" href="#home">Get Involved</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+   <li><a href="#donate">Donate</a></li>
+<!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
+  
+</ul>
+
+
+
+  </head>
+
+
+
+
+
+
+
 
     <style>
         *container {
@@ -33,7 +67,7 @@
             margin: 0px auto;
         }
 
-        .container:after {
+        .container1:after {
             content:
                 ";
 display:block;
@@ -98,7 +132,7 @@ display:block;
     </style>
 
     <body>
-        <div class=“container”>
+        <div class=“container1”>
             <div class="col c100">
                 <div class="store">
                     <h1> Make a difference</h1>
