--- a/store.html
+++ b/store.html
@@ -30,25 +30,12 @@
 <!--Mike's insert of the updated nav bar -->
 
 
+
 <title>Project Address Home Page</title>
  <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <div class="logo"><img src="css/images/logoblue.svg"></div>
- <div class="header">Help the Homeless Now</div>
-
-</div>
-<div class="row" id="nav">   
-
-<ul class="topnav">
-  <li><a class="active" href="#home">Get Involved</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-   <li><a href="#donate">Donate</a></li>
-<!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
-  
-</ul>
 
 
 
@@ -62,6 +49,10 @@
 
 
     <style>
+
+        body{
+            background: white;
+        }
         *container {
             max-width: 650px;
             margin: 0px auto;
@@ -133,6 +124,41 @@ display:block;
 
     <body>
         <div class=“container1”>
+
+
+
+
+
+
+
+    <div class="logo"><img src="css/images/logoblue.svg"></div>
+ <div class="header">Help the Homeless Now</div>
+
+</div>
+<div class="row" id="nav">   
+
+<ul class="topnav">
+  <li><a class="active" href="#home">Get Involved</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+   <li><a href="#donate">Donate</a></li>
+<!-- https://www.w3schools.com/css/tryit.asp?filename=trycss_navbar_horizontal_responsive-->
+  
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <div class="col c100">
                 <div class="store">
                     <h1> Make a difference</h1>
