--- a/getInvolved.html
+++ b/getInvolved.html
@@ -95,7 +95,11 @@ display:block;
     .button1: hover {
         box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
     }
-
+    
+ a:link {
+  color: white;
+text-decoration: none;
+}
     a:visited {
         color: #fbbe4a;
         background-color: transparent;
