--- a/getInvolved.html
+++ b/getInvolved.html
@@ -113,7 +113,7 @@ text-decoration: none;
                 <h1> Make a difference</h1>
             </div>
             <p class="desc">
-            <p> On this page you will find our online store. Let others know you are making a difference in your community by getting PROJECT ADDRESS merchandise. 100% of the proceeds will be donated to organizations that serve the NYC homeless population. You will be able to choose from a list of partner organizations when purchasing our merch. </p>
+            <p> On this page you will find different ways to help the homeless community. There are several organizations that are accepting volunteers. Please look at the list below for up-to-date opportunities: (organized in chronological order of events)</p>
 
             <div class="col c33">
                 <div class="card" style="width: 19rem;">
