--- a/getInvolved.html
+++ b/getInvolved.html
@@ -128,10 +128,9 @@ text-decoration: none;
                             <p class="card-text"> 
                                Richmond Hill, Queens <br>
                                Wed,May 19, 2021<br> 8:30pm-1:00pm<br>
-                                http://www.river.fund/
-                                .</p>
+                               </p>
                             <button class="button button1">
-                                <a href="#" target="_blank" class="btn btn-primary">visit</a> </button>
+                                <a href="http://www.river.fund/" target="_blank" class="btn btn-primary">visit</a> </button>
                         </div>
 
                     </div>
