--- a/getInvolved.html
+++ b/getInvolved.html
@@ -176,10 +176,29 @@ text-decoration: none;
                         <button class="button button1">
                             <a href="http://www.wscah.org/" target="_blank" class="btn btn-primary">visit</a> </button>
                     </div>
-
                 </div>
             </div>
         </div>
+            
+            <div class="col c33">
+                <div class="card" style="width: 19rem;">
+                    <div class="card2">
+                        <div class="card-header">
+                            Rap4Bronx
+                        </div>
+                        <div class="card-body">
+                            <p class="card-desc">Volunteers will be unloading boxes that weigh 30-40lbs and will break those down into smaller boxes that go to pantries. They will also receive food deliveries and load them into cars for distribution throughout the community.</p>
+
+                            <p class="card-text"> Castle Hill, Bronx <br>
+                                Tue, May 25, 2021<br>
+                                9:00AM - 2:00PM
+                            </p>
+                            <button class="button button1">
+                                <a href="http://www.rap4bronx.org/" target="_blank" class="btn btn-primary">visit</a> </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
        <div class="col c33">
             <div class="card" style="width: 19rem;">
