--- a/donate.html
+++ b/donate.html
@@ -48,16 +48,21 @@ color:  #A02A28;
 
 }
 
+
+#nav{
+  background-color: #EAE1B6  ;
+}
+
 #banner{
   background-color: white;
 }
 
 #photo{
-  background-color: #A02A28;
+  background-color: #BD6219;
 }
 
 #stats{
-  background-color: #001724;
+  background-color: #778899;
   color: white;
 }
 
@@ -230,7 +235,7 @@ img {
    
     display: grid;
     /*grid-template-rows: 4em 10em 4em; */
-    grid-template-rows: 22% 3.5% 35% 30% 15%;
+    grid-template-rows: 10% 5% 20% 55% 10%;
     grid-template-columns: repeat(11, 1fr);
     /*gap: 10px 0; */
     
@@ -240,6 +245,8 @@ img {
   grid-row:1;
   grid-column: 1/ span 12;
   padding: 30px;
+  border: 0%;
+margin: 0%;
 
 
     
@@ -248,6 +255,8 @@ img {
 #nav{
 grid-row: 2;
 grid-column: 1/span 12;
+border: 0%;
+margin: 0%;
 
 }
 
@@ -255,19 +264,25 @@ grid-column: 1/span 12;
 grid-row: 3;
 grid-column: 1/span 5;
 padding: 10%;
+border: 0%;
+margin: 0%;
+
 }
 
 #stats{
 grid-row: 3;
 grid-column: 6/span 12;
 padding: 10%;
+border: 0%;
+margin: 0%;
 }
 
 #about{
   grid-row: 4;
   grid-column: 1/span 12;
   padding: 10%;
- 
+ border: 0%;
+margin: 0%;
 }
 
 
@@ -276,7 +291,8 @@ padding: 10%;
   grid-column: 1/span 12;
 padding: 25px;
 padding-left: 10%;
-
+border: 0%;
+margin: 0%;
 }
 
 
@@ -400,19 +416,55 @@ font-size: 4.5vw;
 
  </div>
 <div class="row" id="photo">
-  <div class="homeless"><img src="css/images/homel6.png"></div></div> 
+  <div class="shirt"><img src="css/images/shop_sleeve.png"></div></div> 
 
 <div class="row" id="stats"> 
 
-  <h1>In NYC:</h1>
-  An average of 92,091 people are homeless on any given night in 2019. Almost 5 out of 1000 people are homeless. Between 2007-2019 the homelesness population increased by 47%.
-   <div id="source"><p>REFERENCE: The US Department of Housing and Urban Development, US Census Bureau.</p></div> 
+  <h1>VISIT OUR ONLINE STORE</h1>
+  All proceeds go to organizational upkeep--staff, programs, supplies (food, donation and other groceries) for the homeless, and outreach tools to organize volunteers. 
+   <div id="source"><p><a href="https://projectaddressmmp460.github.io/projectaddressnyc/store.html">Click here for our store page.</a></p></div> 
    
 
   <!--Grid container tag--></div> 
 
-<div class="row" id="about"><h2>Our Mission:</h2> 
-  <p>Our mission at <em>Project Address</em> is to connect organizations serving NYC’s homeless community with volunteers and donors. Our campaign builds awareness around the issue, and mobilizes young people to demand systemic change. We hope to inspire you to either volunteer your time at established organizations, or to donate  in order to keep these organizations running.</p>
+<div class="row" id="about">
+  <p> <h2>Donate to these Orgs: </h2>
+
+   <p> <b>(listed in alphabetical order)</b><p>
+
+<p>Ali Forney Center</p>
+<p>224W 35th ST between Seventh and Eight Aves </p>
+<p>212-222-3427</p>
+<p>alifroneycenter.org</p>
+<p>volunteer@aliforneycenter.org</p>
+<br>
+<p>The Ali Forney Center, places homeless LGBT youth (up to 40 percent of New York’s homeless youngsters are queer-identified) in apartments overseen by on-site counselors throughout the city. The center also has medical care, counseling, education programs and employment assistance.</p>
+<br>
+<p>Bowery Mission</p>
+<p>227 Bowery between Rivington and Stanton Sts </p>
+<p>2126743456</p>
+<p>bowery.org</p>
+<br>
+<p>In addition to providing the immediate needs of food, shelter and clothing, the Mission also offers recovery programs and a free medical clinic.</p>
+<br>
+<p>BronxWorks</p>
+<p>Program director</p>
+<p>Juan Rivera 646-393-4072</p>
+<p>jrivera@bronxworks.org</p>
+ <br>
+<p>BronxWorks’ Homeless Outreach Team (HOT) is on the streets 24/7 to help homeless individuals secure long-term housing, medical and psychiatric services, and referrals to drug and alcohol treatment programs.</p>
+<br>
+<p>Coalition for the Homeless</p>
+volunteer@cfthomeless.org
+<br>
+<p>Meals, job-training hub and a crisis- intervention center for at-risk families.</p>
+<br>
+<p>The Doe Fund</p>
+<p>212-628-5207</p>
+<p>doe.org</p>
+<br>
+<p>This organization assists formerly homeless and incarcerated adults in becoming self-sufficient by helping them find permanent housing and gain skills needed to rejoin the workforce.</p> 
+</p>
 
 
 </div>
